[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/NPC/trader_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/NPC/trader_anim_2.png" type="Texture" id=2]
[ext_resource path="res://assets/NPC/trader_anim_1.png" type="Texture" id=3]
[ext_resource path="res://scripts/NPCs/ShopKeeperNPC.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/FFFFORWA.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/dialogue/DialogueScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/menus/ShopUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.5353, 73.6327 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 8 )

[node name="Shopkeeper" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.267738, 1.03817 )
shape = SubResource( 2 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -65.0
margin_top = -117.0
margin_right = 76.0
margin_bottom = -69.0
custom_fonts/bold_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]Talk[/b] [img=36]res://assets/UI/icon_Empty.png[/img]"
text = "Talk "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueScreen" parent="." instance=ExtResource( 6 )]

[node name="ShopUI" parent="." instance=ExtResource( 7 )]

[node name="Keybind" type="Label" parent="."]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 33.7904
margin_top = -115.726
margin_right = 61.7904
margin_bottom = -51.7262
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0.192157, 0.372549, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
